--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <form class="box" action="index.html" method="get">
       <h1>Войти в систему</h1>
       <div class="">
-        <input required type="email" pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})" placeholder="Логин">
+        <input type="email" pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})" placeholder="Логин" required>
       </div>
       <div class="">
         <input required type="password" minlength="6" maxlength="20" placeholder="Пароль">
