--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <input type="email" pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})" placeholder="Логин" required>
       </div>
       <div class="">
-        <input required type="password" minlength="6" maxlength="20" placeholder="Пароль">
+        <input type="password" pattern="[A-z0-9]{6,20}"placeholder="Пароль" required>
       </div>
       <div class="">
         <input type="submit" value="Войти">
