--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <form class="box" action="index.html" method="get">
       <h1>Войти в систему</h1>
       <div class="">
-        <input type="email" pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})" placeholder="Логин" required>
+        <input type="email" pattern="[A-z0-9_.-]{1,}@[A-z0-9_.-]{1,}.[A-z]{2,8}" placeholder="Логин" required>
       </div>
       <div class="">
         <input type="password" pattern="[A-z0-9]{6,20}"placeholder="Пароль" required>
